[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iclr"
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "moskomule", email = "moskomule@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "rich",
    "torch",
    "tqdm",
    "chika"
]
dynamic = ["version"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"

[project.urls]
Documentation = "https://moskomule.github.io/iclr"
Issues = "https://github.com/moskomule/iclr/issues"
Source = "https://github.com/moskomule/iclr"

[tool.hatch.version]
path = "iclr/__about__.py"

[tool.hatch.envs.tests]
dependencies = [
    "pytest",
]

[[tool.hatch.envs.test.matrix]]
python = ["312", ]

[tool.hatch.envs.docs]
extra-dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]"
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]